2001-12-02  Havoc Pennington  <hp@pobox.com>

	* gconf/gconf-value.h: put casts in the accessor macros, so they 
	can accept void pointers. Doh.

2001-11-26  Havoc Pennington  <hp@redhat.com>

	* configure.in: version to 1.1.5

Tue Nov 20 15:37:58 2001  Owen Taylor  <otaylor@redhat.com>

	* gconf/gconf-client.c: Remove extraneous gobject/* includes.

2001-11-18  Miles Lane  <miles@megapathdsl.net>

	* gconf/gconf-client.h: replace include of gobject/gobject.h
	with glib-object.h, due to a change in gobject/gobject.h
	that forces an #error for all direct includes.
	This checkin was approved by Havoc.

2001-10-31  Havoc Pennington  <hp@pobox.com>

	* configure.in: bump version to 1.1.4, and set revision to 1

	* doc/gconf/Makefile.am: fix this

	* doc/gconf/gconf.types: update
	
2001-10-31  Havoc Pennington  <hp@pobox.com>

	* gconf/gconftool.c: add --recursive-unset command line option

2001-10-31  Zbigniew Chyla  <cyba@gnome.pl>

	* gconf/gconf-internals.c (gconf_activate_server): Plug leak.

2001-10-30  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* backends/val-encode.c: add missing headers to remove
	some warnings.

2001-10-29  jacob berkman  <jacob@ximian.com>

	* gconf-editor/gconf-editor.c (main): bind to GETTEXT_PACKAGE
	rather than PACKAGE

	* autogen.sh: call glib-gettextize

	* configure.in: set the GETTEXT_PACKAGE to be more like the gnome
	1 one

2001-10-30  Abel Cheung  <maddog@linux.org.hk>

	* configure.in: When probing for db3, check libdb-3.3, libdb-3.2 and
	  libdb-3.1 in addition to libdb-3 .

2001-10-16  Ross Golder  <ross@golder.org>

	* gconf.spec.in: updated installation paths

2001-10-15  Havoc Pennington  <hp@redhat.com>

	* gconf/gconftool.c (main): don't create config daemon for
	--get-default-source
	(main): shut down daemon in makefile install mode

2001-10-14  Havoc Pennington  <hp@redhat.com>

	* configure.in: bump version, increment GCONF_CURRENT
	and GCONF_AGE due to API additions

2001-10-13  Jaka Mocnik  <jaka@gnu.org>
