@@ -1,3 +1,8 @@
+2001-12-02  Laszlo Peter  <laca@ireland.sun.com>
+
+	* gconf/gconf-internals.c (get_hostname): fix memory alignment
+	problem on Solaris.
+
 2001-12-02  Havoc Pennington  <hp@pobox.com>
 
 	* gconf/gconf-value.h: put casts in the accessor macros, so they 
